static/css/dashboard/purchase.css
.dashboard-side {
    display: none;
}

.dashboard-purchase {
    width: 700px;
    padding: 10px;
    padding-bottom: 30px;
    margin: 0 auto;
    border: 2px solid #DADADA;
}

.dashboard-purchase .billing-info {
    border: 2px solid #DADADA;
    width: 560px;
    height: 275px;
    margin: 0 auto;
}

.dashboard-purchase .pay-info h2 {
    font-size: 16px;
    font-weight: 700;
    color: rgba(0, 0, 0, .7);
    margin-bottom: 20px;
}

.dashboard-purchase .discount {
    position: relative;
}

.dashboard-purchase .mileage {
    position: relative;
    height: 31px;
}

.dashboard-purchase .point {
    position: relative;
    margin-top: 20px;
}

.dashboard-purchase .mileage-input {
    width: 175px;
    height: 30px;
    position: relative;
    margin-top: 4px;
    float: left;
    border-bottom: 1px solid rgba(0, 0, 0, .25);
}

.dashboard-purchase .mileage-input h3 {
    left: 0;
    font-size: 14px;
    font-weight: 500;
    color: #3D3D3D;
    line-height: 32px;
    float: left;
}

.dashboard-purchase .mileage-input h3.unit {
    right: 0;
}

.dashboard-purchase .mileage-input input {
    padding: 7px 5px 5px 5px;
    width: 110px;
    color: #648efc;
    font-size: 14px;
    font-weight: 600;
    text-align: right;
    float: left;
}

.dashboard-purchase .mileage .button {
    float: left;
    margin-left: 10px;
    padding-top: 5px;
}

.dashboard-purchase .mileage .button button {
    font-size: 10px;
    background: white;
    border: 1px solid rgba(0, 0, 0, .25);
    padding: 3px 10px 3px 10px;
}

.dashboard-purchase .mileage .button span {
    font-size: 10px;
    display: block;
    margin-top: 5px;
}

.dashboard-purchase .point-input {
    width: 175px;
    height: 30px;
    position: relative;
    margin-top: 4px;
    float: left;
    border-bottom: 1px solid rgba(0, 0, 0, .25);
}

.dashboard-purchase .point-input h3 {
    left: 0;
    font-size: 14px;
    font-weight: 500;
    color: #3D3D3D;
    line-height: 32px;
    float: left;
}

.dashboard-purchase .point-input h3.unit {
    right: 0;
}

.dashboard-purchase .point-input input {
    padding: 7px 5px 5px 5px;
    width: 110px;
    color: #648efc;
    font-size: 14px;
    font-weight: 600;
    text-align: right;
    float: left;
}

.dashboard-purchase .point .button {
    float: left;
    margin-left: 10px;
    padding-top: 5px;
}

.dashboard-purchase .point .button button {
    font-size: 10px;
    background: white;
    border: 1px solid rgba(0, 0, 0, .25);
    padding: 3px 10px 3px 10px;
}

.dashboard-purchase .point .button span {
    font-size: 10px;
    display: block;
    margin-top: 5px;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.dashboard-purchase .pay {
    clear: both;
    margin-top: 80px;
}

.dashboard-purchase .pay .pay-option label {
    font-size: 11px;
    margin-right: 10px;
}

.dashboard-purchase .pay-info {
    float: left;
    width: 65%;
    padding: 25px 0 30px 25px;
}

.dashboard-purchase .pay-option {
    width: 95%;
}

.dashboard-purchase .total {
    float: right;
    background: #F2F2F2;
    width: 25%;
    height: 100%;
    text-align: right;
    padding-right: 10px;
}

.dashboard-purchase .total h2 {
    margin-top: 175px;
    margin-bottom: 10px;
    font-weight: 500;
    font-size: 16px;
    color: rgba(0, 0, 0, .7);
}

.dashboard-purchase .total h1 {
    font-size: 25px;
    font-weight: 700;
    color: rgba(0, 0, 0, .7);
    letter-spacing: -.02em;
}

.dashboard-purchase .item {
    width: 520px;
    margin: 0 auto;
    padding: 40px 20px 10px 20px;
    margin-bottom: 20px;
}

.dashboard-purchase .item .item-image {
    width: 70px;
    height: 70px;
    display: inline-block;
}

.dashboard-purchase .item .item-image img {
    width: 100%;
    height: 100%;
}

.dashboard-purchase .item .item-info {
    width: 285px;
    margin-left: 30px;
    display: inline-block;
    vertical-align: top;
}

.dashboard-purchase .item .item-info .item-seller {
    font-size: 12px;
    margin-bottom: 5px;
}

.dashboard-purchase .item .item-info .item-title {
    font-size: 16px;
    font-weight: 700;
    margin-bottom: 5px;
    color: rgba(0, 0, 0, .7);
}

.dashboard-purchase .item .item-info .item-subtitle {
    font-size: 12px;
    line-height: 1.5;
}

.dashboard-purchase .item .item-price {
    display: inline-block;
    vertical-align: top;
}

.dashboard-purchase .item .item-price h2 {
    text-align: right;
    font-size: 16px;
    font-weight: 700;
    margin-top: 30px;
    margin-left: 50px;
    color: rgba(0, 0, 0, .7);
}

.dashboard-purchase .buyer-info {
    border: 2px solid #DADADA;
    width: 510px;
    margin: 0 auto;
    margin-top: 20px;
    padding: 25px;
    display: none;
}

.dashboard-purchase .buyer-info label {
    font-size: 12px;
    font-weight: 400;
    color: rgba(0, 0, 0, .7);
    margin-bottom: 20px;
    line-height: 30px;
}

.dashboard-purchase .buyer-info input {
    border: 1px solid rgba(0, 0, 0, .15);
    margin-left: 5px;
    margin-right: 15px;
    font-size: 12px;
    padding: 5px 10px 5px 10px;
    float: right;
}

.dashboard-purchase .dashboard-purchase-bill {
    text-align: center;
    margin-top: 35px;
}

.dashboard-purchase .dashboard-purchase-bill .dashboard-charge-button {
    background: #648efc;
    color: white;
    font-size: 14px;
    font-weight: 700;
    padding: 10px 35px 10px 35px;
}

.buyer-form {
    margin: 0 auto;
    margin-top: 15px;
    width: 240px;
}

.buyer-form:first-child {
    margin-top: 0;
}

.buyer-form span {
    color: orangered;
    margin-right: 3px;
}

